last version of 0.1.3
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/ann@3 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ANN/ChangeLog
+++ b/pkg/ANN/ChangeLog
@@ -5,6 +5,7 @@
 	* R :				bug fixed  
 	* src :				bug fixed  
 	* src :				speed improvement
+	* R :				options removed
 
 
 2011-11-18  Francis Roy-Desrosiers  <francis.roy.desrosiers@gmail.com>
