--- a/pkg/ANN/ChangeLog
+++ b/pkg/ANN/ChangeLog
@@ -1,10 +1,17 @@
 2011-02-22  Francis Roy-Desrosiers  <francis.roy.desrosiers@gmail.com>
 
+	* DESCRIPTION: Release 0.1.4
+
+	* R :				bug fixed
+
+
+2011-02-22  Francis Roy-Desrosiers  <francis.roy.desrosiers@gmail.com>
+
 	* DESCRIPTION: Release 0.1.3
 
 	* R :				bug fixed  
 	* src :				bug fixed  
-	* src :				speed improvement
+	* src :				speed improved
 	* R :				options removed
 
 
